# nanograd

./: README.md  pyproject.toml  test_nanograd.py
.github/workflows/: python-package.yml
examples/: 01_automatic_gradient.py  02_neural_net.py
nanograd/: __init__.py  _engine.py  _nn.py
