[tool.poetry]
name = "nanograd"
version = "0.0.1"
description = "Clone of the incredible micrograd"
authors = ["Maximilan Schebek <maxschebek@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
micrograd = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.11.1"
pytest = "^6.2.5"
ipython = "^7.29.0"
ipykernel = "^6.5.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
